# pyxschem

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/pyxschem/: __init__.py  attributes.py  cli.py  diff.py  generate.py  hierarchy.py  library.py  model.py  parser.py  schematic.py  symbol.py  validate.py
tests/: conftest.py  test_attributes.py  test_cli.py  test_diff.py  test_generate.py  test_hierarchy.py  test_integration.py  test_library.py  test_model.py  test_parser.py  test_realworld.py  test_schematic.py  test_symbol.py  test_validate.py
tests/fixtures/: multiline.sch  simple.sch
tests/fixtures/hierarchy/: cap.sym  nmos.sym  resistor.sym  top.sch
tests/fixtures/hierarchy/sub/: amp.sch  bias.sch
