[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyxschem"
version = "0.1.0"
description = "Python library for reading, editing, and generating xschem schematic files"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.10"
keywords = ["xschem", "schematic", "eda", "analog", "ic-design"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

[project.urls]
Repository = "https://github.com/pyxschem/pyxschem"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pyxschem"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests requiring xschem installed on the system",
]

[tool.ruff]
src = ["src"]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F811"]
